--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FarmBnB - Find Your Perfect Farm Getaway</title>
-    <meta name="description" content="Experience rustic charm and peaceful countryside living. Browse unique farm properties for your perfect vacation rental." />
+    <title>FarmBnB - Live a day the farm way</title>
+    <meta name="description" content="Live a day the farm way. Experience rustic charm and peaceful countryside living. Browse unique farm properties for your perfect vacation rental." />
     <meta name="author" content="FarmBnB" />
 
-    <meta property="og:title" content="FarmBnB - Find Your Perfect Farm Getaway" />
-    <meta property="og:description" content="Experience rustic charm and peaceful countryside living. Browse unique farm properties for your perfect vacation rental." />
+    <meta property="og:title" content="FarmBnB - Live a day the farm way" />
+    <meta property="og:description" content="Live a day the farm way. Experience rustic charm and peaceful countryside living. Browse unique farm properties for your perfect vacation rental." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
